# aurora

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  ROADMAP.md  api-key-rotation-spec.md  aurora-spec.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  run-gui.sh  session-ses_190a.md  session-ses_1aa3.md
.github/workflows/: ci.yml
ai/: Cargo.toml
ai/src/: error.rs  freellm.rs  lib.rs  sidecar.rs
ai/src/agent/: mod.rs  tools.rs
ai/src/context/: mod.rs
ai/src/health/: mod.rs
ai/src/keystore/: mod.rs  pool.rs  quota.rs
ai/src/providers/: freellm_provider.rs  groq.rs  local.rs  mock.rs  mod.rs  ollama.rs  openai.rs
ai/src/ratelimit/: mod.rs
ai/src/router/: events.rs  mod.rs
aurora-bin/: Cargo.toml
aurora-bin/src/: main.rs
aurora-core/: Cargo.toml
aurora-core/src/: lib.rs
config/: Cargo.toml
config/src/: default.toml  lib.rs  loader.rs  schema.rs  types.rs
editor/: Cargo.toml
editor/src/: buffer.rs  cursor.rs  error.rs  events.rs  lib.rs  syntax.rs  viewport.rs
lsp/: Cargo.toml
lsp/src/: bridge.rs  client.rs  connection.rs  lib.rs  pool.rs  transport.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
sidecar/: setup.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ActivityBar.tsx  ChatPanel.tsx  Editor.tsx  Icon.tsx  KeyManagerPanel.tsx  SearchSidebar.tsx  Sidebar.tsx  SourceControlSidebar.tsx  StatusBar.tsx
src/styles/: theme.css
src/types/: index.ts
src/utils/: icons.ts
ui/: Cargo.toml
ui/src/: app.rs  lib.rs  status.rs  theme.rs  window.rs
