[package]
name = "aurora-bin"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
aurora-core = { path = "../aurora-core" }
aurora-tauri = { path = "../src-tauri" }
ai = { path = "../ai" }
plugin = { path = "../plugin", default-features = false }
editor = { path = "../editor" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }