[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[lib]
name = "editor"
path = "src/lib.rs"

[features]
default = []
treesitter = ["dep:tree-sitter", "dep:tree-sitter-highlight"]

[dependencies]
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
thiserror = "1.0"

# Syntax highlighting (optional)
tree-sitter = { version = "0.22", optional = true }
tree-sitter-highlight = { version = "0.22", optional = true }

[dev-dependencies]
tempfile = "3"