[package]
name = "lsp"
version.workspace = true
edition.workspace = true

[lib]
name = "aurora_lsp"
path = "src/lib.rs"

[dependencies]
editor = { path = "../editor" }
lsp-types = "0.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "rt", "macros"] }
tracing = "0.1"
dashmap = "5.5"
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"
bytes = "1.0"
url = "2.5"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
