[workspace]

[package]
name = "aurora-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "aurora_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }


# Aurora workspace crates
editor = { path = "../editor" }
ai = { path = "../ai" }
config = { path = "../config", package = "config" }
lsp = { path = "../lsp" }
