[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[features]
default = []
gui = ["dep:eframe"]

[dependencies]
eframe = { version = "0.24", optional = true }
editor = { path = "../editor" }
ai = { path = "../ai" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros", "sync"] }

